# ssm-service-ml

./: .gitignore  .gitlab-ci.yml  .project  Dockerfile  LICENSE  Pipfile  README.md  docker-compose.yml  pyproject.toml  setup.py
.ci/: publish-package.sh
.github/workflows/: code-checks.yaml  code_checks_ssm_ml.yaml  tags.yaml  test_ssm_ml.yaml
Database/: Dockerfile  ssm.sql
jupyterhub/: Dockerfile  docker-entrypoint.sh  jupyter.cert  jupyter.key  jupyterhub_config.py  ssmdemo.ipynb
src/ssm_ml/: Filter.py  ssmml.py
ssm_ml/: Filter.py  ssmml.py
tests/: testFilter.py  test_filter.py  test_ssm_ml.py  testssmml.py
