[project]
name = "ssm-ml"
version = "0.1.0"
description = "SSM ML Package"
authors = [
    { name = "Robert Smith", email = "smithrw@ornl.gov" },
]
license = {text = "BSD-3-Clause"}
readme = "README.md"

dependencies = [
  "matplotlib == 3.6.3",
  "numpy == 1.24.2",
  "psycopg2-binary == 2.9.5",
  "scipy == 1.10.0",
  "scikit-learn == 1.2.1",
]

[project.optional-dependencies]
dev = [
    "black >= 23.10.0",
    "build >= 1.2",
    "pytest >= 7.2.1",
    "pytest-cov >= 4.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

